# mlir

include/mlir/Dialect/SPIRV/: Passes.h  SPIRVBase.td  SPIRVDerivedOps.td  SPIRVDialect.h  SPIRVOps.td  SPIRVStructureOps.td
include/mlir/SPIRV/: SPIRVTypes.h
lib/Dialect/SPIRV/: SPIRVDialect.cpp  SPIRVOps.cpp
lib/Dialect/SPIRV/Serialization/: Deserializer.cpp  Serializer.cpp
lib/Dialect/SPIRV/Transforms/: CMakeLists.txt  DecorateWithLayoutInfoSPIRVPass.cpp
lib/SPIRV/: SPIRVOps.cpp
test/Dialect/SPIRV/: canonicalize.mlir  function.mlir  ops.mlir
test/Dialect/SPIRV/Serialization/: function.mlir  struct.mlir
test/Dialect/SPIRV/Transforms/: global-decoration.mlir
test/SPIRV/: ops.mlir
test/mlir-vulkan-runner/: kernel.spv  kernel.spvasm  module.mlir
tools/mlir-opt/: CMakeLists.txt
tools/mlir-vulkan-runner/: CMakeLists.txt  mlir-vulkan-runner.cpp  mlir-vulkan-runtime.cpp  mlir-vulkan-runtime.h
unittests/Dialect/SPIRV/: CMakeLists.txt  SerializationTest.cpp
